--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,10 +11,7 @@
         <div class="content__left">
         {{ end }}
             <h1 class="mainHeading">{{ $data.BasicInfo.FirstName }} <span>{{ $data.BasicInfo.LastName }}</span></h1>
-            {{ partial "_profile.html" $data }}
-            {{ partial "_experience.html" $data }}
-            {{ partial "_education.html" $data }}
-            {{ partial "_references.html" $data }}
+            {{/*  {{ partial "_profile.html" $data }}  */}}
             {{ partial "_coverletter.html" $data }}
         </div>
         {{ if .Site.Params.swapColumns }}
@@ -22,12 +19,8 @@
         {{ else }}
         <div class="content__right">
         {{ end }}
-            {{ partial "_avatar.html" $data }}
+            <hideme>{{ partial "_avatar.html" $data }}</hideme>
             {{ partial "_contacts.html" $data }}
-            {{ partial "_skills.html" $data }}
-            {{ partial "_languages.html" $data }}
-            {{ partial "_diplomas.html" $data }}
-            {{ partial "_interests.html" $data }}
         </div>
     </div>
 </body>
