expand cover letter body to be a list

--- a/assets/scss/components/_coverletter.scss
+++ b/assets/scss/components/_coverletter.scss
@@ -24,6 +24,10 @@
         box-sizing: border-box;
         // margin: 0px;
         margin: 20px;
+
+        & ul, li {
+            margin-top: 10px;
+        }
     }
 
     &__closing {
